--- a/core/templates/core/dashboard_admin.html
+++ b/core/templates/core/dashboard_admin.html
@@ -292,7 +292,7 @@
     <div class="card-body p-3">
       <div class="row g-2">
         <div class="col-6 col-md-3">
-          <a href="{% url 'quick_planner' %}" class="btn btn-outline-primary w-100 d-flex flex-column align-items-center p-3 small">
+          <a href="{% url 'strategic_planning_dashboard' %}" class="btn btn-outline-primary w-100 d-flex flex-column align-items-center p-3 small">
             <i class="bi bi-compass-fill fs-4 mb-2"></i>
             <span>{% trans "Strategic Planner" %}</span>
           </a>
